--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,46 @@
-networks:
-  app_dev:
-  data_base:
-
 services:
   app:
     build: .
-    env_file:
-      - .env
+    container_name: ap
+    restart: unless-stopped
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     depends_on:
       - postgres
     networks:
-      - app_dev
-      - data_base
-  
+      - internet
+      - localnet
+
   postgres:
     image: postgres:17.4
+    container_name: db
+    restart: unless-stopped
     env_file:
       - .env
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data/pgdata
     networks:
-      - data_base
-  
+      - localnet
+
   nginx:
     image: nginx:latest
+    container_name: ng
+    restart: unless-stopped
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./app/static:/static
+      - './nginx.conf:/etc/nginx/nginx.conf'
     depends_on:
       - app
     networks:
-      - app_dev
+      - internet
+
+networks:
+  internet:
+    name: internet
+    driver: bridge
+  localnet:
+    name: localnet
+    driver: bridge
