--- a/nginx.conf
+++ b/nginx.conf
@@ -8,13 +8,16 @@ events {
 
 
 http {
-    
+    upstream backendapp {
+        server app:8000;
+    }
+
     server {
         listen       80;
         server_name  localhost;
 
         location / {
-            proxy_pass  http://app:8000/;
+            proxy_pass  http://backendapp/;
         }
 
     }
